--- a/Sign form/style.css
+++ b/Sign form/style.css
@@ -22,7 +22,7 @@ form{
 input{
 	box-sizing: border-box;
 	background-color: #f0f0f0;
-	color: #b7b7b7;
+	color: #9b9b9b;
 	padding:10px;
 	height: 34px;
 	font-size: 0.625em;
