--- a/Sign form/css/style.css
+++ b/Sign form/css/style.css
@@ -26,6 +26,7 @@ body {
 	margin-top: 10px;
 	font-size: 10px;
 }
+
 .main_form_input {
 	box-sizing: border-box;
 	background-color: #f0f0f0;
@@ -41,10 +42,12 @@ input[placeholder] {
 	font-weight: 600;
 	font-size: 12px;
 }
+
 .main_form p{
 	margin: 0;
 	color: #dddddd;
 }
+
 .main h2{
 	font-weight: 400;
 	margin:0;
@@ -68,9 +71,11 @@ input[placeholder] {
 	box-sizing: border-box;
 	display: inline-block;
 }
+
 .two_name{
 	float: right;
 }
+
 .users, 
 .email, 
 .passw {
@@ -93,6 +98,7 @@ input[placeholder] {
 	background-color: #f14100;
 	transition: 3s;
 }
+
 .footer_button:not(:hover){
 	transition: 3s;
 }
@@ -126,12 +132,14 @@ input[placeholder] {
 	background-image: url("../images/user.png");
 	background-repeat: no-repeat;
 	background-position: 95%;
+	padding-right: 40px;
 }
 
 .passw input{
 	background-image: url("../images/pass.png");
 	background-repeat: no-repeat;
 	background-position: 95%;
+	padding-right: 35px;
 }
 
 .ower p {
@@ -152,29 +160,30 @@ input[placeholder] {
 }
 
 .check_label {
-    position: relative;
-    padding-left: 20px;
-    color: #dddddd;
+	position: relative;
+	padding-left: 20px;
+	color: #dddddd;
     
 }
 .check_agree {
 	position: relative;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-    margin: 0;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+	margin: 0;
 } 
 
 .check_label::before {
 	content: '';
 	height: 11px;
-    width: 11px;
-    background-color: #f0f0f0;
+    	width: 11px;
+    	background-color: #f0f0f0;
 	position: absolute;
-    left: -3px;
+   	 left: -3px;
     
 }
+
 .check_agree:checked + .check_label::before {
     background: url("../images/check1.png");
     height: 11px;
