--- a/Elena/css/style.css
+++ b/Elena/css/style.css
@@ -12,6 +12,10 @@ body {
 	margin: 0 auto;
 }
 
+.main h2 {
+	margin:0;
+}
+
 .text_dec {
 	font-size: 14px;
 	color: #787b80;
@@ -363,14 +367,11 @@ body {
 	background-image: linear-gradient(to right,#e2e3e4, #e7e7e9);
 }
 
-.sectionSix .section_box {
-	display: flex;
-}
-
 .sectionSix .section_box div {
 	box-sizing: border-box;
 	width: 275px;
 	margin-left: 20px;
+	float:left;
 }
 
 .sectionSix h2 {
@@ -383,7 +384,7 @@ body {
 }
 
 .sectionSix p {
-	padding-bottom: 20px;
+	padding:20px 0;
 	margin: 0;
 }
 
@@ -431,7 +432,8 @@ body {
 
 .sectionSeven_marg {
 	width: 120px;
-	margin-right: 40px;
+	margin-right: 30px;
+	float:left;
 }
 
 .sectionSeven_star h2:before {
@@ -439,10 +441,6 @@ body {
 	display: block;
 	position: absolute;
 	left:150px;
-}
-
-.sectionSeven_last {
-	width: 102px;
 }
 
 .Elena {
