--- a/Elena/css/style.css
+++ b/Elena/css/style.css
@@ -5,6 +5,9 @@ body {
 	background-color: #f5f5f5;
 }
 
+.main .section_box h2 {
+	margin: 0;
+}
 .section_box {
 	width: 580px;
 	box-sizing: border-box;
@@ -12,16 +15,11 @@ body {
 	margin: 0 auto;
 }
 
-.main .section_box h2 {
-	margin:0;
-}
-
 .text_dec {
 	font-size: 14px;
 	color: #787b80;
 	margin:30px 0;
 }
-
 .main_header {
 	background-image: url(../images/header.png);
 	background-size: cover;
@@ -69,6 +67,7 @@ body {
 .line {
 	color: #ffffff;
 	font-weight: bold;
+	margin: 0;
 }
 
 .line:before,
@@ -91,17 +90,17 @@ body {
 
 .main_header_button {
 	display: inline-block;
-    	text-decoration: none;
-    	color: #ffffff;
-    	position: relative;
-    	border: 0;
-    	cursor: pointer;
+    text-decoration: none;
+    color: #ffffff;
+    position: relative;
+    border: 0;
+    cursor: pointer;
 	background-color: #50c3af;
 	margin-top: 65px;
-    	font-size: 15px;
-    	font-weight: 600;
-    	padding: 14px 45px;
-    	border-radius: 25px;
+    font-size: 15px;
+    font-weight: 600;
+    padding: 14px 45px;
+    border-radius: 25px;
 
 }
 
@@ -191,13 +190,14 @@ body {
 	padding-bottom: 20px;
 	text-transform: uppercase;
 	position: relative;
+	margin: 0;
 }
 
 .section_button_green {
 	margin-top:30px;
-    	font-size: 14px;
-    	padding: 8px 15px;
-    	border-radius: 20px;
+    font-size: 14px;
+    padding: 8px 15px;
+    border-radius: 20px;
 	text-align: center;
 	background-color: #50c3af;
 	cursor: pointer;
@@ -235,6 +235,8 @@ body {
 	padding-left: 30px;
 	position: relative;
 	text-transform: uppercase;
+	margin: 0;
+
 }
 
 .sectionThree h2:before {
@@ -297,6 +299,8 @@ body {
 	padding-bottom: 10px;
 	text-transform: uppercase;
 	position: relative;
+	margin: 0;
+
 }
 
 .sectionFour a {
@@ -328,6 +332,8 @@ body {
 	position: relative;
 	padding-left: 35px;
 	text-transform: uppercase;
+	margin: 0;
+
 }
 
 .sectionFive_send {
@@ -363,8 +369,8 @@ body {
 .sectionSix .section_box div {
 	box-sizing: border-box;
 	width: 275px;
-	margin-left: 20px;
-	float:left;
+	margin-left: 10px;
+	float: right;
 }
 
 .sectionSix h2 {
@@ -403,6 +409,7 @@ body {
 	font-size: 15px;
 	position: relative;
 	text-transform: uppercase;
+	margin: 0;
 } 
 
 .sectionSeven h2::after {
@@ -419,13 +426,13 @@ body {
 
 .sectionSeven_image {
 	margin-top: 70px;
-	display: flex;	
+	display: block;	
 }
 
 .sectionSeven_marg {
-	width: 120px;
+	width: 110px;
 	margin-right: 30px;
-	float:left;
+	float: left;
 }
 
 .sectionSeven_star h2:before {
