--- a/Elena/css/style.css
+++ b/Elena/css/style.css
@@ -5,7 +5,7 @@ body {
 	background-color: #f5f5f5;
 }
 
-.main .section_box h2 {
+.main h2 {
 	margin: 0;
 }
 .section_box {
@@ -20,6 +20,7 @@ body {
 	color: #787b80;
 	margin:30px 0;
 }
+
 .main_header {
 	background-image: url(../images/header.png);
 	background-size: cover;
@@ -90,18 +91,17 @@ body {
 
 .main_header_button {
 	display: inline-block;
-    text-decoration: none;
-    color: #ffffff;
-    position: relative;
-    border: 0;
-    cursor: pointer;
+    	text-decoration: none;
+   	color: #ffffff;
+    	position: relative;
+    	border: 0;
+    	cursor: pointer;
 	background-color: #50c3af;
 	margin-top: 65px;
-    font-size: 15px;
-    font-weight: 600;
-    padding: 14px 45px;
-    border-radius: 25px;
-
+    	font-size: 15px;
+    	font-weight: 600;
+    	padding: 14px 45px;
+    	border-radius: 25px;
 }
 
 .main_header_button:hover {
@@ -195,9 +195,9 @@ body {
 
 .section_button_green {
 	margin-top:30px;
-    font-size: 14px;
-    padding: 8px 15px;
-    border-radius: 20px;
+    	font-size: 14px;
+    	padding: 8px 15px;
+    	border-radius: 20px;
 	text-align: center;
 	background-color: #50c3af;
 	cursor: pointer;
@@ -409,7 +409,6 @@ body {
 	font-size: 15px;
 	position: relative;
 	text-transform: uppercase;
-	margin: 0;
 } 
 
 .sectionSeven h2::after {
@@ -442,15 +441,12 @@ body {
 	left:150px;
 }
 
-.Elena {
-	font-size: 13px;
-}
-
 .section_footer {
 	width: 580px;
 	box-sizing: border-box;
 	padding: 20px 0;
 	margin: 0 auto;
+	font-size: 13px;
 }
 
 .section_foote span {
