--- a/mediaqueries/css/style.css
+++ b/mediaqueries/css/style.css
@@ -104,10 +104,10 @@
         	margin: 0 auto;
     	}
 	.fifth.block .colored {
-		width: 50%;
-        	display: inline-block;
+        	width: 50%;
+        	float: left;
         	box-sizing: border-box;
-	}
+    	}
     	.fourth.block .colored:nth-last-child(2),
     	.fifth.block .colored:nth-last-child(2)  {
         	width: 100%
