--- a/mediaqueries/css/style.css
+++ b/mediaqueries/css/style.css
@@ -56,6 +56,7 @@
         .fifth.block .colored {
             width: 33%;
             display: inline-block;
+            margin-right:-5px;
         }
 
 }
