--- a/mediaqueries/css/style.css
+++ b/mediaqueries/css/style.css
@@ -1,3 +1,7 @@
+* {
+        box-sizing:border-box;
+}
+
 @media screen and (min-width: 1801px) {
         .first.block  .plain,
         .third.block .colored,
@@ -5,7 +9,6 @@
             width: 25%;
             display: block;
             float: left;
-            box-sizing: border-box;
         }
 
         .second.block .colored,
@@ -13,13 +16,11 @@
         .fourth.block .colored:nth-last-child(2) {
             width: 50%;
             float: left;
-            box-sizing: border-box;
         }
 
         .fifth.block .colored {
             width: 20%;
             float: left;
-            box-sizing: border-box;
         }
 
 }
@@ -29,7 +30,6 @@
         .second.block .colored  {
             width: 50%;
             float: left;
-            box-sizing: border-box;
             text-align: center;
         }
         
@@ -70,12 +70,10 @@
         .fifth.block .colored {
             width:50%;
             float: left;
-            box-sizing: border-box;
         }
 
         .third.block .colored {
             width: calc(100%/3);
-            box-sizing: border-box;
             float: left;
         }
 
@@ -89,9 +87,7 @@
 
         .fourth.block .colored {
             width: 30%;
-            display:inline-block;
-            box-sizing: border-box;
-            
+            display:inline-block;      
         }
 
         .fifth.block .colored:nth-last-child(2) {
@@ -104,13 +100,11 @@
         .second.block  .colored,
         .fourth.block .colored {
             width: 50%;
-            box-sizing: border-box;
             margin: 0 auto;
         }
     .fifth.block .colored {
             width: 50%;
             float: left;
-            box-sizing: border-box;
         }
         .fourth.block .colored:nth-last-child(2),
         .fifth.block .colored:nth-last-child(2)  {
@@ -123,7 +117,6 @@
         .first.block  .plain, 
         .second.block  .colored {
             width: 50%;
-            box-sizing: border-box;
             margin: 0 auto;
     }
 }
