--- a/mediaqueries/css/style.css
+++ b/mediaqueries/css/style.css
@@ -79,17 +79,13 @@
             float: left;
         }
 
-        .fourth.block .colored:nth-child(3n+1) {
-            width: 35%;
-        }
-
-        .fourth.block {
-            text-align: center;
-        }
-
         .fourth.block .colored {
-            width: 30%;
-            display:inline-block;      
+                width: 35%;
+                float: left;
+        }
+
+        .fourth.block .colored:nth-child(2) {
+                 width: 30%;
         }
 
         .fifth.block .colored:nth-last-child(2) {
