--- a/flexGrid/css/style.css
+++ b/flexGrid/css/style.css
@@ -1,15 +1,15 @@
 * {
-	margin: 0;
-	padding:0;
-	box-sizing: border-box;
-	border:0;
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+  border:0;
 }
 
 .news, 
 .nav,
 .newsFlex,
 .navFlex {
-	color: #fff;
+  color: #fff;
 }
 
 .logo, 
@@ -18,133 +18,132 @@
 .logoFlex, 
 .footerFlex,
 .listFlex {
-	background-color: #f3c74a;
+  background-color: #f3c74a;
 }
 
 .menu,
 .menuFlex {
-	background-color: #f62e22;	
+  background-color: #f62e22;	
 }
 
 .news,
 .newsFlex {
-	background-color: #ba6260;	
+  background-color: #ba6260;	
 }
 
 .nav,
 .navFlex {
-	background-color: #757575;
+  background-color: #757575;
 }
 /*GRID*/
 
 .main {
-	display: grid;
-	grid-template-columns: 100px 0.65fr 0.35fr;
-	grid-template-rows: 100px 300px 150px;
-	grid-gap:1px;
-	background-color: #000;
-	margin-bottom:15px;
+  display: grid;
+  grid-template-columns: 100px 65fr 35fr;
+  grid-template-rows: 100px 300px 150px;
+  grid-gap:1px;
+  background-color: #000;
+  margin-bottom:15px;
 
 }
 
 .main div {
-	display: flex;
-    	justify-content: center;
-    	align-items: center;
-    	text-align: center;
-	font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 30px;
 }
 
 .logo {
-	grid-area: 1/1/2/2;
+  grid-area: 1/1/2/2;
 }
 
 
 .menu {
-	grid-area: 1/2/2/4;
+  grid-area: 1/2/2/4;
 }
 
 
 .news {
-	grid-area: 2/1/3/2;
+  grid-area: 2/1/3/2;
 }
 
 
 .list {
-	grid-area: 2/2/3/3;
+  grid-area: 2/2/3/3;
 }
 
 
 .nav {
-	grid-area: 2/3/4/4;
+  grid-area: 2/3/4/4;
 }
 
 .footer {
-	grid-area: 3/1/4/3;
+  grid-area: 3/1/4/3;
 }
 
 /*FLEXBOX*/
 
 .header {
- 	width: 100%;
-  	display: flex;
+  width: 100%;
+  display: flex;
 }
 
 .textDec {
-	flex-direction: column;
-	text-align: center;
-	display: flex;
-	font-size: 30px;
-	justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  display: flex;
+  font-size: 30px;
+  justify-content: center;
 }
 
 .logoFlex {
-  	width: 100px;
- 	height: 100px;
-  	flex-shrink: 0;
+  width: 100px;
+  height: 100px;
+  flex-shrink: 0;
 }
 
 .menuFlex {
-  	height: 100px;
-  	flex-grow: 1;
-  	flex-shrink: 0;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
 
 .content-container {
-  	width: 100%;
-  	display: flex;
-  	flex-direction: row;
-  	text-align: center;
-  	font-size: 30px;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  font-size: 30px;
 }
 
 .content-container__left {
-  	width: calc((100% - 100px) * 0.65 + 100px);
-  	display: flex;
-  	flex-direction: row;
-  	flex-wrap: wrap;
+  /*width: calc((100% - 100px) * 0.65 + 100px);*/
+  flex-grow: 65;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .navFlex {
-  	height: 450px;
-  	width: calc((100% - 100px) * 0.35);
+  height: 450px;
+  /*width: calc((100% - 100px) * 0.35);*/
+  flex-grow: 35;
 }
 
 .newsFlex {
-  	width: 100px;
-  	height: 300px;
-  	flex-shrink: 0;
+  width: 100px;
+  height: 300px;
+  flex-shrink: 0;
 }
 
 .listFlex {
-  	height: 300px;
-  	flex-grow: 1;
-  	flex-shrink: 0;
+  height: 300px;
+  flex-grow: 1;
+  flex-shrink: 0;
 }
 
 .footerFlex {
-  	height: 150px;
-  	width: 100%;
+  height: 150px;
+  width: 100%;
 }
 
 
@@ -154,7 +153,7 @@
 .listFlex,
 .footerFlex,
 .navFlex {
-  	box-sizing: border-box;
-  	border: 1px solid black;
-  	border-width: 1px 1px 0 0;
+  box-sizing: border-box;
+  border: 1px solid black;
+  border-width: 1px 1px 0 0;
 }
