--- a/flexGrid/css/style.css
+++ b/flexGrid/css/style.css
@@ -119,6 +119,7 @@
 .content-container__left {
   /*width: calc((100% - 100px) * 0.65 + 100px);*/
   flex-grow: 65;
+  flex-basic:100px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -127,6 +128,7 @@
   height: 450px;
   /*width: calc((100% - 100px) * 0.35);*/
   flex-grow: 35;
+  flex-basic:0;
 }
 
 .newsFlex {
